bad fixes for jumping footer problem

--- a/css/themes/basic.css
+++ b/css/themes/basic.css
@@ -72,7 +72,8 @@ pre code {
 	top: 0;
 	left: 10%;
 	width: 80%;
-	min-height: 5em;
+	/*min-height: 5em;*/
+	min-height: 700px;
 	margin: 0 auto;
 }
 
