--- a/css/themes/fade.css
+++ b/css/themes/fade.css
@@ -18,9 +18,13 @@
 .slide-view-module .slide-before, .slide-view-module .slide-after {
 	position: absolute;
 	z-index: -1;
-	/*height:800;*/
+	/*height:800; */
 
 }
 .slide-current {
 	opacity: 1;
+}
+
+.nofader {
+	display: none;
 }
